--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 	<script defer src="./bundle.js"></script>
 </head>
 <body>
-	<div id="hello"></div>
+	<div id="text"></div>
+	<button id="createRoomButton">Create Room</button>
+	<button id="joinRoomButton">JOIN!</button>
+	<div id="playerlist"></div>
 </body>
 </html>
