--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<script defer src="./bundle.js"></script>
 </head>
 <body>
+	<div class="logo" id="logo"></div>
 
 	<div id="styling">
 		<label for="username">Username</label>
