--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,37 @@
 
 	<div id="lobby">
 		<h1>LOBBY</h1>
+
+		<div id="settings">
+			<label for="rounds">Rounds</label>
+			<select id="rounds" disabled>
+				<option value="3" selected="selected">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+			</select>
+
+			<label for="questionQuantity">How many Questions?</label>
+			<select id="questionQuantity" disabled>
+				<option value="5" selected="selected">5</option>
+				<option value="10">10</option>
+				<option value="15">15</option>
+				<option value="20">20</option>
+			</select>
+
+			<label for="timer">Writing time in seconds</label>
+			<select id="timer" disabled>
+				<option value="30" selected="selected">30</option>
+				<option value="60">60</option>
+				<option value="90">90</option>
+				<option value="120">120</option>
+			</select>
+		</div>
+
+		<h2>PLAYERS</h2>
 		<div id="players"></div>
-		<p id="joinLink"></p>
+		<h5>INVITE</h2>
+		<a target="_blank" id="joinLink"></a>
 	</div>
 </body>
 </html>
