--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<script defer src="./bundle.js"></script>
 </head>
 <body>
-	<div class="logo" id="logo"></div>
+	<img class="logo" id="logo"></img>
 
 	<div id="styling">
 		<label for="username">Username</label>
